--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,18 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 158 -
+[2007/02/25] - RaX - Overview : Further console and startup tweaks.
+[2007/02/25] - RaX - Fixed line color issue, didn't include part of the necessary code in
+ the critical section.
+[2007/02/25] - RaX - Added TConsole.ReadLn(AString); This is an alias for ReadLn which also
+ includes our command parser.
+[2007/02/25] - RaX - Messed with MainProc.Startup to have it look better.
+[2007/02/25] - RaX - Moved MainProc.DisplayHeader into the dpr, have it display only ONCE.
+[2007/02/25] - RaX - at 3am I forgot I had removed the thirdpartycredits from startup display
+ new command, /credits, displays them.
+-
+
 - Rev 157 -
 [2007/02/24] - RaX - Overview : Finished log configuration by adding the ability to set
  which types of messages are logged. Added ability to configure which directories are used
