--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,10 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 171 -
+[2007/03/13] - Aeomin - Updated headers, corrected typoes, etc.
+-
+
 - Rev 170 -
 [2007/03/13] - RaX - Remade the Pathing algorithm, now behaves exactly like Aegis. Timing
  issue still remains - Tsusai, take a look?
