--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,10 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 175 -
+[2007/03/14] - RaX - Fully implemented Direction variable in TBeing, forgot to before.
+-
+
 - Rev 174 -
 [2007/03/14] - RaX - Overview : General cleanup in TBeing + TCharacter.
 [2007/03/14] - RaX - Moved overridden properties in TCharacter to inherited ones.
