--- a/changelog.txt
+++ b/changelog.txt
@@ -14,6 +14,14 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 183 -
+[2007/03/19] - RaX - Overview : Created basic GM Command component and added it as a part 
+ of the zone server, will also be apart of the inter server in the future.
+[2007/03/19] - RaX - Modified GMCommands.pas, made it a class rather than a bunch of routines.
+[2007/03/19] - RaX - Changed IsCommand to check the list of commands to see if a specified
+ piece of chat started by # is really a gm command.
+-
+
 - Rev 182 -
 [2007/03/19] - RaX - Added simple gm command parsing to zone server in the new AreaChat routine.
 [2007/03/19] - RaX - Added to inter server, it now accepts gm command sends from zones.
